* Fixed problem with custom CoursePress login page.
* Changed redirect after login, for editors it will be now WordPress Dashboard.
* Changed redirect for non-logged users who enter student dashboard URL to login page.
* Added key length check for mcrypt function to avoid wrong key size.
* Fixed a bug with pagination on course archive page.
* Fixed a bug with custom certificate background.

= 2.0.2 =
-------------------------------------------------
* Fixed a bug with class autoloader function.
* Added better default CoursePress certificate.
* Added "Settings" and "Support" links on WP plugins page.
* Fixed a bug with import students to course when MarketPress is active.
* Handle situation when student try to add comment to non existing module.
* Fixed "Domain Name" for proper translation.
* Added check to import JSON file.
* Added confirmation popup when student withdraw from the course.
* Fixed non-virtual student login page.
* Removed fakepath file location in file upload.
* Fixed student dashboard page.
* Fixed warning message when user is logged out.
* Fixed untranslated texts.
* Added allow weak password registration.

= 2.0.1 =
------------------------------------------------------
* Fixed: Chat module support for wordpress-chat plugin
* Fixed: Module's unlimited retry attempts
* Fixed: Language Internationalization
* Fixed: compatibility issue with Market Press CSS covering course edit
* Fixed: Student progress migration when Market Press is enabled
* Fixed: Treegrid js error
* Fixed: Units overview link
* Updated WPMU dashboard
* Updated included Market Press version 3.1.2

= 2.0.0 =
-------------------------------------------------
* Overall optimisation through whole new codebase.
* Added 'Focus' course view mode where modules will be viewed individually.
* Added per course completion certificate option.
* Added course completion pages (pre-completion, successful completion, failed).
* Added course notification when the course starts.