@@ -15,6 +15,7 @@ CHANGELOG
 * Added key length check for mcrypt function to avoid wrong key size.
 * Fixed a bug with pagination on course archive page.
 * Fixed a bug with custom certificate background.
+* Fixed a bug with available unit date for different languages then English.
 
 = 2.0.2 =
 -------------------------------------------------
